# ferox

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CODENAMES.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CREDITS.md  LICENSE  Makefile  Makefile.emcc  Makefile.mingw  Makefile.win  NMakefile  README-ko.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: build_tests-linux.yml  build_tests-macos.yml
docs/static/images/: readme-logo.xcf  social-preview.xcf
examples/: CMakeLists.txt  Makefile  Makefile.drm  Makefile.emcc  Makefile.mingw  Makefile.win  README-ko.md  README.md
examples/include/: ferox-raylib.h  ferox_raylib.h
examples/res/html/: shell.html
examples/res/images/: logo.xcf
examples/res/videos/: broadphase.webm  collision.webm  dynamics.webm  geometry.webm
examples/src/: arrow.c  basic.c  bouncy.c  bricks.c  bullet.c  circles.c  cowlvl.c  cows.c  example_broadphase.c  example_collision.c  example_dynamics.c  example_geometry.c  jump.c  laser.c  melon.c  query.c  raycast.c  raylib.c  slopes.c  smash.c
ferox/: CMakeLists.txt
ferox/include/: ferox.h  fr_math.h  fr_vec2.h
ferox/src/: broadphase.c  collision.c  debug.c  dynamics.c  geometry.c  quadtree.c  timer.c  utils.c  vector.c  world.c
include/: ferox.h
src/: broad-phase.c  broad_phase.c  collision.c  geometry.c  rigid-body.c  rigid_body.c  timer.c  utils.c  world.c
test/: Makefile
test/src/: collision.c
tests/: Makefile  Makefile.mingw
tests/include/: greatest.h
tests/src/: broad-phase.c  broad_phase.c  collision.c  ferox-tests.c  ferox_tests.c  geometry.c  rigid-body.c  rigid_body.c  utils.c  world.c
